--- a/NotikaEmail_Identity/Views/Shared/Components/_NavbarComponentPartial/Default.cshtml
+++ b/NotikaEmail_Identity/Views/Shared/Components/_NavbarComponentPartial/Default.cshtml
@@ -20,7 +20,7 @@
                         <a data-toggle="tab" href="#Charts"><i class="notika-icon notika-bar-chart"></i> Ayarlar</a>
                     </li>
                     <li>
-                        <a data-toggle="tab" href="#Tables"><i class="notika-icon notika-windows"></i> Mail Gönderdiklerim</a>
+                        <a data-toggle="tab" href="#Tables"><i class="notika-icon notika-windows"></i> Kayıtlı Kişilerim</a>
                     </li>
                     
                 </ul>
@@ -63,7 +63,7 @@
                     <div id="Tables" class="tab-pane notika-tab-menu-bg animated flipInX">
                         <ul class="notika-main-menu-dropdown">
                             <li>
-                                <a href="normal-table.html">Normal Table</a>
+                                <a href="/Default/PeopleISentMessagesTo">İncele</a>
                             </li>
                            
                         </ul>
